// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test that no regressions occur in the migration using snapshots Migrate class 0 1`] = `
Object {
  "advisory": Object {
    "advisor": "Christine Laborde-Casterot",
    "room": "148",
  },
  "classes": Object {
    "0e64835e-9c94-4e31-8566-6acef0cf916f": Object {
      "block": "Purple",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": false,
        "2": true,
        "3": true,
        "4": false,
        "5": true,
        "6": true,
        "7": true,
      },
      "name": "AP Computer Science Algorithms",
      "room": "452",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Robert Cohen",
      "uuid": "0e64835e-9c94-4e31-8566-6acef0cf916f",
    },
    "258bf909-4ecb-4ae8-88bd-502b45fb4a1e": Object {
      "block": "Blue",
      "lab": true,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": false,
        "3": true,
        "4": true,
        "5": true,
        "6": false,
        "7": true,
      },
      "name": "Biotechnology & Personal Genetics H",
      "room": "339",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Kenneth Bateman",
      "uuid": "258bf909-4ecb-4ae8-88bd-502b45fb4a1e",
    },
    "68af1d6f-c1d9-4546-b9c2-2404b1d0d9a0": Object {
      "block": "Tan",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": 1,
        "3": 2,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": false,
        "2": true,
        "3": true,
        "4": true,
        "5": false,
        "6": true,
        "7": true,
      },
      "name": "AP Statistics",
      "room": "441",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "John Fantini",
      "uuid": "68af1d6f-c1d9-4546-b9c2-2404b1d0d9a0",
    },
    "6d5c4095-1e21-4489-a1a3-bfcc1537fcb1": Object {
      "block": "Red",
      "lab": true,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": true,
        "3": false,
        "4": true,
        "5": true,
        "6": true,
        "7": false,
      },
      "name": "AP Biology ",
      "room": "339",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Kenneth Bateman",
      "uuid": "6d5c4095-1e21-4489-a1a3-bfcc1537fcb1",
    },
    "d49905af-51ce-4a45-ae14-abbb3c96edcd": Object {
      "block": "Green",
      "lab": false,
      "lunches": Object {
        "1": 2,
        "2": undefined,
        "3": undefined,
        "4": 0,
        "5": undefined,
        "6": 0,
        "7": 2,
      },
      "meets": Object {
        "1": true,
        "2": false,
        "3": true,
        "4": true,
        "5": false,
        "6": true,
        "7": true,
      },
      "name": "English 12H",
      "room": "227",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Alan Brazier",
      "uuid": "d49905af-51ce-4a45-ae14-abbb3c96edcd",
    },
  },
}
`;

exports[`Test that no regressions occur in the migration using snapshots Migrate class 1 1`] = `
Object {
  "advisory": Object {
    "advisor": "Mr. Lovett",
    "room": "",
  },
  "classes": Object {
    "1ec5cf1d-6fa8-4044-974f-cd952e626a8a": Object {
      "block": "Green",
      "lab": true,
      "lunches": Object {
        "1": 0,
        "2": undefined,
        "3": undefined,
        "4": 2,
        "5": undefined,
        "6": 2,
        "7": 1,
      },
      "meets": Object {
        "1": true,
        "2": false,
        "3": true,
        "4": true,
        "5": false,
        "6": true,
        "7": true,
      },
      "name": "APES",
      "room": "341",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Mr. Bateman",
      "uuid": "1ec5cf1d-6fa8-4044-974f-cd952e626a8a",
    },
    "22b3368e-472f-40ec-9559-a4ea209d90a0": Object {
      "block": "Blue",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": false,
        "3": true,
        "4": true,
        "5": true,
        "6": false,
        "7": true,
      },
      "name": "Pre-Calc",
      "room": "430",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Ms. Lapato",
      "uuid": "22b3368e-472f-40ec-9559-a4ea209d90a0",
    },
    "3456dee7-8147-4d55-b3e3-1ac26029fb29": Object {
      "block": "Orange",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": true,
        "3": true,
        "4": false,
        "5": true,
        "6": true,
        "7": false,
      },
      "name": "English",
      "room": "243",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Ms. McCormick",
      "uuid": "3456dee7-8147-4d55-b3e3-1ac26029fb29",
    },
    "5910e310-43cb-4dc3-81c7-1efe2c3f709a": Object {
      "block": "No Color",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": false,
        "2": false,
        "3": false,
        "4": true,
        "5": false,
        "6": false,
        "7": false,
      },
      "name": "Guidance Seminar",
      "room": "306",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Mr. Steere",
      "uuid": "5910e310-43cb-4dc3-81c7-1efe2c3f709a",
    },
    "8a368a52-cd72-47a7-b1bb-ee0fcdeba902": Object {
      "block": "Tan",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": 0,
        "3": 0,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": false,
        "2": true,
        "3": true,
        "4": true,
        "5": false,
        "6": true,
        "7": true,
      },
      "name": "History",
      "room": "321",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Ms. Despo",
      "uuid": "8a368a52-cd72-47a7-b1bb-ee0fcdeba902",
    },
    "a42e0854-1e68-485d-9fcd-1b3a23805acd": Object {
      "block": "Yellow",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": false,
        "3": false,
        "4": true,
        "5": false,
        "6": false,
        "7": true,
      },
      "name": "Adventure ",
      "room": "Gym",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Mr. Griffith",
      "uuid": "a42e0854-1e68-485d-9fcd-1b3a23805acd",
    },
    "ae9dd66b-fd99-41a8-96df-03343744458b": Object {
      "block": "Red",
      "lab": true,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": true,
        "3": false,
        "4": true,
        "5": true,
        "6": true,
        "7": false,
      },
      "name": "Biology",
      "room": "338",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Mr. G",
      "uuid": "ae9dd66b-fd99-41a8-96df-03343744458b",
    },
    "c76f780f-29f8-416a-8bfd-d37e91949400": Object {
      "block": "Purple",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": false,
        "2": true,
        "3": true,
        "4": false,
        "5": true,
        "6": true,
        "7": true,
      },
      "name": "Latin",
      "room": "146",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Mr. Esposito",
      "uuid": "c76f780f-29f8-416a-8bfd-d37e91949400",
    },
  },
}
`;

exports[`Test that no regressions occur in the migration using snapshots Migrate class 2 1`] = `
Object {
  "advisory": Object {
    "advisor": "Breizisr",
    "room": "",
  },
  "classes": Object {
    "2c28112f-6b13-4ee7-81c0-d0cfff21e4ac": Object {
      "block": "No Color",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": false,
        "2": false,
        "3": false,
        "4": false,
        "5": true,
        "6": false,
        "7": false,
      },
      "name": "Guidance Seminar",
      "room": "310",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Ms.Trask",
      "uuid": "2c28112f-6b13-4ee7-81c0-d0cfff21e4ac",
    },
    "35dd2f45-d061-49d7-a3ac-0a3a50257c08": Object {
      "block": "Tan",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": 0,
        "3": 0,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": false,
        "2": true,
        "3": true,
        "4": true,
        "5": false,
        "6": true,
        "7": true,
      },
      "name": "History",
      "room": "320",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Mr.liacos",
      "uuid": "35dd2f45-d061-49d7-a3ac-0a3a50257c08",
    },
    "47920dd1-8585-4836-a50c-0dce34f17850": Object {
      "block": "Green",
      "lab": false,
      "lunches": Object {
        "1": 2,
        "2": undefined,
        "3": undefined,
        "4": 2,
        "5": undefined,
        "6": 2,
        "7": 2,
      },
      "meets": Object {
        "1": true,
        "2": false,
        "3": true,
        "4": true,
        "5": false,
        "6": true,
        "7": true,
      },
      "name": "Band",
      "room": "163",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Steve",
      "uuid": "47920dd1-8585-4836-a50c-0dce34f17850",
    },
    "4c331e41-23e8-499c-8249-ddec45735add": Object {
      "block": "Yellow",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": 1,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": true,
        "3": false,
        "4": true,
        "5": true,
        "6": false,
        "7": true,
      },
      "name": "English",
      "room": "2somthing",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Mr.Joeseph",
      "uuid": "4c331e41-23e8-499c-8249-ddec45735add",
    },
    "62eb3e02-150e-4c18-bb4d-6863433fc058": Object {
      "block": "Orange",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": true,
        "3": true,
        "4": false,
        "5": true,
        "6": true,
        "7": false,
      },
      "name": "Math",
      "room": "4somthing",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Mr.Horne",
      "uuid": "62eb3e02-150e-4c18-bb4d-6863433fc058",
    },
    "bc117daa-c453-40c2-b1c5-233a962a8a53": Object {
      "block": "Purple",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": false,
        "2": true,
        "3": true,
        "4": false,
        "5": true,
        "6": true,
        "7": true,
      },
      "name": "Spanish ",
      "room": "242",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Sra O’Neil ",
      "uuid": "bc117daa-c453-40c2-b1c5-233a962a8a53",
    },
    "eda46515-1b82-4b81-9456-8cee7cb70d7f": Object {
      "block": "Blue",
      "lab": true,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": false,
        "3": true,
        "4": true,
        "5": true,
        "6": false,
        "7": true,
      },
      "name": "Bio",
      "room": "321",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Ms.Fuchs",
      "uuid": "eda46515-1b82-4b81-9456-8cee7cb70d7f",
    },
  },
}
`;

exports[`Test that no regressions occur in the migration using snapshots Migrate class 3 1`] = `
Object {
  "advisory": Object {
    "advisor": "Professor Lovett",
    "room": "152",
  },
  "classes": Object {
    "0141c7e5-8a56-4af1-8c33-e68a3c6ec4e2": Object {
      "block": "Tan",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": 2,
        "3": 1,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": false,
        "2": true,
        "3": true,
        "4": true,
        "5": false,
        "6": true,
        "7": true,
      },
      "name": "ACP World Literature",
      "room": "219",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Mr. Joseph",
      "uuid": "0141c7e5-8a56-4af1-8c33-e68a3c6ec4e2",
    },
    "1fed4b03-765d-424c-94b8-2bd9abd87d43": Object {
      "block": "Blue",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": false,
        "3": true,
        "4": false,
        "5": true,
        "6": false,
        "7": false,
      },
      "name": "Fitness Center",
      "room": "Fitness center",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Wass",
      "uuid": "1fed4b03-765d-424c-94b8-2bd9abd87d43",
    },
    "3c585ae1-2d80-442d-ae8d-026c1f96e4d7": Object {
      "block": "Purple",
      "lab": true,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": false,
        "2": true,
        "3": true,
        "4": false,
        "5": true,
        "6": true,
        "7": true,
      },
      "name": "Honors Biology",
      "room": "337",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Ms. Fuchs",
      "uuid": "3c585ae1-2d80-442d-ae8d-026c1f96e4d7",
    },
    "42142cef-fe09-49aa-b47a-e1e01d327034": Object {
      "block": "Yellow",
      "lab": true,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": 0,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": true,
        "3": false,
        "4": true,
        "5": true,
        "6": false,
        "7": true,
      },
      "name": "Advanced Placement Chemistry",
      "room": "437",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Dr. Van Geel",
      "uuid": "42142cef-fe09-49aa-b47a-e1e01d327034",
    },
    "a8b2a89a-d8b0-4580-923d-b13802500ec6": Object {
      "block": "Red",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": true,
        "3": false,
        "4": true,
        "5": true,
        "6": true,
        "7": false,
      },
      "name": "Honors Pre-Calculus",
      "room": "419",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Ms. Ceretta",
      "uuid": "a8b2a89a-d8b0-4580-923d-b13802500ec6",
    },
    "b5944d6b-5cf6-4d6f-a41c-c2a64df183c7": Object {
      "block": "Orange",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": true,
        "3": true,
        "4": false,
        "5": true,
        "6": true,
        "7": false,
      },
      "name": "ACP US History",
      "room": "418",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Mrs. Sullivan",
      "uuid": "b5944d6b-5cf6-4d6f-a41c-c2a64df183c7",
    },
    "e3d1e5c4-4583-4d41-b8fa-288d9ba08471": Object {
      "block": "No Color",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": false,
        "2": false,
        "3": false,
        "4": false,
        "5": true,
        "6": false,
        "7": false,
      },
      "name": "Junior guidance seminar",
      "room": "310",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Mrs trask",
      "uuid": "e3d1e5c4-4583-4d41-b8fa-288d9ba08471",
    },
    "f2e1383f-1a85-4c74-bbea-033096b68b11": Object {
      "block": "Green",
      "lab": false,
      "lunches": Object {
        "1": 2,
        "2": undefined,
        "3": undefined,
        "4": 2,
        "5": undefined,
        "6": 2,
        "7": 2,
      },
      "meets": Object {
        "1": true,
        "2": false,
        "3": true,
        "4": true,
        "5": false,
        "6": true,
        "7": true,
      },
      "name": "Concert Band ",
      "room": "163",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Mr. Steven Jude Scott",
      "uuid": "f2e1383f-1a85-4c74-bbea-033096b68b11",
    },
  },
}
`;

exports[`Test that no regressions occur in the migration using snapshots Migrate class 4 1`] = `
Object {
  "advisory": Object {
    "advisor": "Ms. Moniz",
    "room": "Second Floor",
  },
  "classes": Object {
    "22f95b72-2db4-4057-875d-0270f815affe": Object {
      "block": "Blue",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": false,
        "3": true,
        "4": true,
        "5": true,
        "6": false,
        "7": true,
      },
      "name": "Math",
      "room": "450",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Ms. Wohler",
      "uuid": "22f95b72-2db4-4057-875d-0270f815affe",
    },
    "232eef46-2881-49f8-9e2a-029e756b1e4e": Object {
      "block": "Green",
      "lab": false,
      "lunches": Object {
        "1": 2,
        "2": undefined,
        "3": undefined,
        "4": 2,
        "5": undefined,
        "6": 2,
        "7": 2,
      },
      "meets": Object {
        "1": true,
        "2": false,
        "3": true,
        "4": true,
        "5": false,
        "6": true,
        "7": true,
      },
      "name": "Band",
      "room": "Band Room",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Mr. Scott",
      "uuid": "232eef46-2881-49f8-9e2a-029e756b1e4e",
    },
    "322bd30a-e09f-44fd-ba90-b08b38b1eda0": Object {
      "block": "Yellow",
      "lab": true,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": 0,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": true,
        "3": false,
        "4": true,
        "5": true,
        "6": false,
        "7": true,
      },
      "name": "Biology",
      "room": "338",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Ms. Morrison",
      "uuid": "322bd30a-e09f-44fd-ba90-b08b38b1eda0",
    },
    "41d015d9-ed3f-427b-bb03-958232c09d0e": Object {
      "block": "Purple",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": false,
        "2": true,
        "3": true,
        "4": false,
        "5": true,
        "6": true,
        "7": true,
      },
      "name": "Free",
      "room": "None",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "None",
      "uuid": "41d015d9-ed3f-427b-bb03-958232c09d0e",
    },
    "54531ca8-e15e-4ec7-ab47-3d95dc6a3f71": Object {
      "block": "No Color",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": false,
        "2": false,
        "3": false,
        "4": false,
        "5": false,
        "6": false,
        "7": true,
      },
      "name": "Guidance",
      "room": "357",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Barrell ",
      "uuid": "54531ca8-e15e-4ec7-ab47-3d95dc6a3f71",
    },
    "6ae99c1f-8204-4c2c-90fb-a9c28063e5d6": Object {
      "block": "Red",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": true,
        "3": false,
        "4": true,
        "5": true,
        "6": true,
        "7": false,
      },
      "name": "History",
      "room": "410",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Dr. Cacace",
      "uuid": "6ae99c1f-8204-4c2c-90fb-a9c28063e5d6",
    },
    "77c9a1a6-d43c-47d4-8d68-37e6a2d9c59a": Object {
      "block": "Tan",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": 2,
        "3": 1,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": false,
        "2": true,
        "3": true,
        "4": true,
        "5": false,
        "6": true,
        "7": true,
      },
      "name": "English",
      "room": "227",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Mr. Brazier ",
      "uuid": "77c9a1a6-d43c-47d4-8d68-37e6a2d9c59a",
    },
    "7bc54277-032a-49ff-8dc2-47c48f3f05c5": Object {
      "block": "No Color",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": false,
        "3": true,
        "4": false,
        "5": true,
        "6": false,
        "7": false,
      },
      "name": "Power Up",
      "room": "202",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Brophy ",
      "uuid": "7bc54277-032a-49ff-8dc2-47c48f3f05c5",
    },
    "99cacc6c-b27a-4078-96ae-735606e0a234": Object {
      "block": "Orange",
      "lab": false,
      "lunches": Object {
        "1": undefined,
        "2": undefined,
        "3": undefined,
        "4": undefined,
        "5": undefined,
        "6": undefined,
        "7": undefined,
      },
      "meets": Object {
        "1": true,
        "2": true,
        "3": true,
        "4": false,
        "5": true,
        "6": true,
        "7": false,
      },
      "name": "French",
      "room": "239",
      "semesters": Object {
        "1": true,
        "2": true,
      },
      "teacher": "Madame Nkam",
      "uuid": "99cacc6c-b27a-4078-96ae-735606e0a234",
    },
  },
}
`;
